// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow > write > should generate correct code when there are input variables 1`] = `
"from vellum.workflows import BaseWorkflow


class TestWorkflow(BaseWorkflow):
    pass
"
`;

exports[`Workflow > write > should generate correct code when there are no input variables 1`] = `
"from vellum.workflows import BaseWorkflow


class TestWorkflow(BaseWorkflow):
    pass
"
`;

exports[`Workflow > write > should generate correct code with Search Results as an output variable 1`] = `
"from vellum.workflows import BaseWorkflow
from .inputs import Inputs
from vellum.workflows.state import BaseState
from .nodes.final_output import FinalOutput


class TestWorkflow(BaseWorkflow[Inputs, BaseState]):
    class Outputs(BaseWorkflow.Outputs):
        query = FinalOutput.Outputs.value
"
`;

exports[`Workflow > write > should handle edges pointing to non-existent nodes 1`] = `
"from vellum.workflows import BaseWorkflow
from .inputs import Inputs
from vellum.workflows.state import BaseState
from .nodes.search_node import SearchNode


class TestWorkflow(BaseWorkflow[Inputs, BaseState]):
    graph = SearchNode
"
`;

exports[`Workflow > write > should handle the case of multiple nodes with the same label 1`] = `
"from vellum.workflows import BaseWorkflow
from .nodes.templating_node import TemplatingNode
from .nodes.templating_node_1 import TemplatingNode as TemplatingNode1TemplatingNode


class TestWorkflow(BaseWorkflow):
    graph = TemplatingNode >> TemplatingNode1TemplatingNode
"
`;

exports[`Workflow > write > should handle the workflow generation even if graph attribute fails in non-strict mode 1`] = `
"from vellum.workflows import BaseWorkflow


class TestWorkflow(BaseWorkflow):
    pass
"
`;
